fix: fix grid columns stretching on big screens

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -137,6 +137,7 @@ body {
   .view-content {
     display: grid;
     grid-template-rows: auto auto 1fr;
+    grid-template-columns: auto 1fr auto auto;
     grid-template-areas:
       "corner dates sidebar settings"
       "corner multiday sidebar settings"
